# BlackBadgeRaffleBadge_DC30

./: .cproject  .gitignore  .project  CMakeLists.txt  DC30BlackBadgeRaffle.csv  Makefile  NOTICE  README.md  partitions.csv  rafflebadge.code-workspace  sdkconfig
components/botnet/: botnet_ui.c  botnet_ui.h  component.mk  rick.h
components/tpl/: CMakeLists.txt  tpl.c
components/uthash/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  ble.c  ble.h  boot.c  boot.h  btn.c  btn.h  ca.crt  component.mk  console.c  console.h  drawing.c  drawing.h  led.c  led.h  main.c  mesh.c  mesh.h  peers.c  peers.h  raffle.c  raffle.h  reboot.c  reboot.h  sd.c  sd.h  state.c  state.h  system.h  time_manager.c  time_manager.h  ui.c  ui.h  unlocks.h  util.c  util.h  wifi.c  wifi.h
